--- a/content/posts/2.md
+++ b/content/posts/2.md
@@ -2,7 +2,7 @@
 title: "GoogleのShell Style Guide解説【Background編】"
 date: "2024-08-29"
 summary: "GoogleのShell Style GuideのBackgroundセクションを読みこなしてBash力を上げようというお話"
-tags: ["Bash"]
+tags: ["Bash", "Shell Style Guide解説"]
 TocOpen: true
 cover:
   image: images/posts/2/cover.png
@@ -16,6 +16,11 @@ cover:
 
 この記事のゴールは、**GoogleのShell Style GuideのBackgroundセクションを読みこなしてBash力を上げること**です。  
 これを通して、保守性の高いシェルスクリプトが書けるようになることを目指します。
+
+なお、本記事は「Shell Style Guide解説」というシリーズの一記事となっています。  
+全ての記事は以下からご覧ください。
+
+[Shell Style Guide解説]({{% ref "/tags/shell-style-guide解説/" %}})
 
 ## Background
 
