--- a/content/posts/3.md
+++ b/content/posts/3.md
@@ -27,12 +27,12 @@ cover:
 [Shell Style Guide > Shell Files and Interpreter Invocation](https://google.github.io/styleguide/shellguide.html#s2-shell-files-and-interpreter-invocation)を解説します。  
 和訳してもしょうがないので、箇条書きで簡潔にまとめつつ重要な点については補足していきます。
 
-## 拡張子
+### 拡張子
 
 - 実行可能ファイルは拡張子なし（推奨）または`.sh`
 - ライブラリは`.sh`かつ実行可能であってはならない
 
-## SUID/SGID
+### SUID/SGID
 
 - SUID/SGIDは禁止
 - 権限昇格が必要なら`sudo`を使う
