--- a/content/posts/4.md
+++ b/content/posts/4.md
@@ -2,7 +2,7 @@
 title: "Hugoで立ち上げたサイトをNew Relicで監視【RUM編】"
 date: "2024-08-30"
 summary: "Hugoで立ち上げた本ブログをNew Relicでリアルユーザ監視（RUM）してみようというお話"
-tags: ["監視", "New Relic", "本ブログを監視してみよう"]
+tags: ["監視", "New Relic", "Hugo", "本ブログを監視してみよう"]
 TocOpen: true
 cover:
   image: images/posts/4/cover.png
