--- a/content/posts/6.md
+++ b/content/posts/6.md
@@ -2,7 +2,7 @@
 title: "Hugoで立ち上げたサイトをNew Relicで監視【シンセティック監視編】"
 date: "2024-09-01"
 summary: "Hugoで立ち上げた本ブログをNew Relicでシンセティック監視してみようというお話"
-tags: ["監視", "New Relic", "本ブログを監視してみよう"]
+tags: ["監視", "New Relic", "Hugo", "本ブログを監視してみよう"]
 TocOpen: true
 cover:
   image: images/posts/6/cover.png
