--- a/content/pages/1.md
+++ b/content/pages/1.md
@@ -15,10 +15,10 @@ cover:
 この記事のゴールは、クリーンアーキテクチャを説明できるようになることです。  
 これを通して、ソフトウェア設計スキルの向上を目指します。
 
-質問を洗い出す際に参考にした資料は「[ちょうぜつソフトウェア設計入門]()」です。  
+質問を洗い出す際に参考にした資料は「[ちょうぜつソフトウェア設計入門](https://gihyo.jp/book/2022/978-4-297-13234-7)」です。  
 著作権違反にならないよう解答は掲載しません。
 
-「[ちょうぜつソフトウェア設計入門]()」を見ながら解答することをおすすめしますが、Web上の記事を使っても解答は十分可能です。  
+「[ちょうぜつソフトウェア設計入門](https://gihyo.jp/book/2022/978-4-297-13234-7)」を見ながら解答することをおすすめしますが、Web上の記事を使っても解答は十分可能です。  
 いずれにせよ自分なりに勉強して言語化することが重要です。  
 それではやっていきましょう。
 
