--- a/content/pages/1.md
+++ b/content/pages/1.md
@@ -32,10 +32,10 @@ cover:
 - クリーンアーキテクチャとは何か説明してください
 - クリーンアーキテクチャの層の分け方のアイデアについて
     - ドメインモデルとは何か説明してください
-    - ドメインモデルの例を10個出してください
+    - ドメインモデルの例を出してください
     - ユースケースとは何か説明してください
-    - ユースケースの例を10個出してください
+    - ユースケースの例を出してください
     - インターフェースアダプタとは何か説明してください
-    - インターフェースアダプタの例を10個出してください
+    - インターフェースアダプタの例を出してください
     - インフラストラクチャとは何か説明してください
-    - インフラストラクチャの例を10個出してください
+    - インフラストラクチャの例を出してください
